--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'monteseratt', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app{
+  background-image: url('./assets/image.jpg');
+  background-color:whitesmoke;
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4 ease-out;
+}
+main{
+  min-height: 100vh;
+  padding: 25px ;
+  background-image: linear-gradient(to bottom,rgba(0,0,0,0.1),rgba(0,0,0,0.5));
+}
+
+.app.warm{
+  background-image: url('./assets/warm.jpg');
+}
+
+.search-box{
+  width: 100%;
+  margin: 0 0 75px;
+  
+}
+.search-box .search-bar{
+  display:flex;
+  width: 100%;
+  padding: 15px;
+  /* max-width: 500px; */
+  appearance: none;
+  background: none;
+  border:none;
+  outline:none;
+  background-color: rgba(255,255,255, 0.3);
+  border-radius: 10px;
+  box-shadow: 0px 5px rgba(0,0,0,0.2);
+  color:  #313131;
+  font-size: 20px;
+
+  transition: 0.4 ease;
+}
+
+.search-box .search-bar:hover{
+  background-color: rgba(255,255,255, 0.5);
+}
+
+.location-box .location{
+  color:rgba(225,225,225,0.7);
+  font-size: 36px;
+  font-weight: 500;
+  text-align:center;
+}
+
+.location-box .date{
+  color:rgba(225,225,225,0.7);
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+
+}
+
+.weather-box{
+  color:rgba(225,225,225,0.7);
+  text-align: center;
+}
+.weather-box .temp{
+
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(225,225,225,0.25);
+  border-radius: 10px;
+  padding: 15px 25px;
+  font-size: 60px;
+  font-weight: 900;
+  box-shadow: 3px 6px rgba(0,0,0,0.1);
+}
+
+.weather-box .weather{
+  font-size: 35px;
 }
